examples/type_system/failing/15_effect_missing_from_caller.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: caller function is typed-pure but calls an IO function.

fn log_line(msg: String) -> Unit with IO {
    print(msg)
}

fn compute(x: Int) -> Int {
    log_line("value=#{to_string(x)}")
    x + 1
}

compute(41)
